<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStratedMainActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="234dp"
        android:layout_marginTop="0dp"
        android:background="#010838"
        android:src="@drawable/getting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/apptitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="monospace"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/buttons"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/page1_tittle"
            android:textAlignment="center"
            android:textColor="@color/getstart_title"
            android:textSize="37sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/page1_tittle2"
            android:textAlignment="center"
            android:textColor="@color/getstart_subtitle"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/page1_tittle4"
            android:textAlignment="center"
            android:textColor="@color/title_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/startbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="70dp"
            android:padding="10dp"
            android:text="@string/getstart"
            android:textSize="20dp"
            android:background="@drawable/button_shape"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
